# weather-service

./: .gitignore  Dockerfile  README.md  deploy.sh  minikube-setup.md  pyproject.toml  requirements.txt  ver_logs_ip.sh
app/: main.py
app/api/v1/: endpoints.py
app/core/: audit.py  config.py  errors.py  throttling.py
app/domain/: models.py
app/infrastructure/: country_api.py  ipinfo_api.py  weather_api.py
app/use_cases/: clima_info.py
docs/: flujo_solicitud.mmd
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
tests/: test_api.py
