[project]
name = "reto3"
version = "0.1.0"
description = ""
authors = [
    {name = "Richard Saavedra",email = "richard.saavedra@evalueserve.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

